--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,10 +14,12 @@
     <!-- This is an example app structure --> 
     <header class='banner'>
         <h1>Instacram</h1>
-        <ul class='nav'>
+        <ul class='nav' id = 'nav'>
+            <!--
             <li class="nav-item"><input type="file"/></li>
             <li class='nav-item'>Icon</li>
             <li class='nav-item'>Icon</li>
+            <-->
         </ul>
     </header>
     <main role='main'>
