--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <title>Instacram</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- You can add your styles and scripts here -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/provided.css" />
     <script type="module" src="src/helpers.js"></script>
     <script type="module" src="src/api.js"></script>
@@ -13,16 +15,127 @@
 <body>
     <!-- This is an example app structure --> 
     <header class='banner'>
-        <h1>Instacram</h1>
-        <ul class='nav' id = 'nav'>
-            <!--
-            <li class="nav-item"><input type="file"/></li>
-            <li class='nav-item'>Icon</li>
-            <li class='nav-item'>Icon</li>
-            <-->
-        </ul>
+        <h1 id = 'home'>Instacram</h1>
+        <div class = 'topnav' id = 'nav'>
+
+
+        </div>
     </header>
     <main role='main'>
+            <div class="modal" id="likesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="likesTitle">Modal title</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body" id = "likes-body">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            <div class="modal" id="commentsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="commentsTitle">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" id = "comments-body">
+                    </div>
+                    <div class="modal-footer" style = "display:block">
+                            <input type = "text" placeholder = "Enter comment here" required id = 'new-comment-desc' style = "width:100%"> <br>
+                            <button type="submit" class="btn btn-primary" id = 'comment-button' style = "width:100%" >Post</button> 
+                    </div>
+                    </div>
+                </div>
+                </div>
+                <div class="modal" id="postsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h3 class="modal-title" id="postsTitle">Modal title</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body" id = "posts-body">
+                                <label class = "labels"> Enter a desription: </label>
+                                <input type = "text" placeholder = "My cool pic" required id = 'new-post-desc'> <br> 
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary" id = 'post-button' >Post</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="modal" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                <div class="modal-header">
+                                    <h3 class="modal-title" id="updateTitle">Settings</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body" id = "update-body">
+                                    <label class = "labels"> Change name (if needed): </label>
+                                    <input type = "text" placeholder = "Enter new name" required id = 'update-name'> <br>
+                                    <label class = "labels"> Change password (if needed): </label>
+                                    <input type = "text" placeholder = "Enter new password" required id = 'update-pass'> <br> 
+                                    <label class = "labels"> Change email (if needed): </label>
+                                    <input type = "text" placeholder = "Enter new email" required id = 'update-email'> <br>  
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="submit" class="btn btn-primary" id = 'update-button' >Update</button>
+                                </div>
+                                </div>
+                            </div>
+                            </div>
+                            
+                            <div class="modal" id="followModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h3 class="modal-title" id="followTitle">Follow</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body" id = "follow-body">
+                                            <label class = "labels"> Search for users: </label>
+                                            <input type = "text" placeholder = "Enter username" required id = 'follow-name'> <br> 
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="submit" class="btn btn-primary" id = 'follow-button' >Search</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal" id="updatePostsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h3 class="modal-title" id="updatePostsTitle">Update post</h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body" id = "update-posts-body">
+                                                <label class = "labels"> Enter a desription: </label>
+                                                <input type = "text" placeholder = "My cool pic" required id = 'update-post-desc'> <br> 
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="submit" class="btn btn-primary" id = 'update-post-button' >Update</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
         <!-- app goes here --> 
         <div id='large-feed'>
             <!-- inject feed data -->
@@ -31,6 +144,9 @@
     <footer>
         <p>Instacram example</p>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="module" src="src/main.js"></script>
 </body>
 </html>
